# Backupoo

./: License  ReadMe.md  pyproject.toml  setup.py
src/: __init__.py
src/AliyunOSS/: __init__.py  authentication.py  upload.py
src/GUI/: __init__.py
src/Schedule/: __init__.py
src/Utils/: __init__.py
